--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -20,5 +20,9 @@
      </ion-label>
      <ion-input type="password"></ion-input>
    </ion-item>
+
+   <div>
+     <ion-button color="primary" size="block">ENTRAR</ion-button>
+   </div>
   </div>
 </ion-content>
