--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -10,19 +10,21 @@
 
   <div id="container">
    <div>
-     <ion-item>
-       <ion-label position="floating">
-         1° Número
-        </ion-label>
-       <ion-input type="number" [(ngModel)]="num1"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">
+        1° Número
+      </ion-label>
+      <ion-input type="number" [(ngModel)]="num1"></ion-input>
+    </ion-item>
 
-     <ion-item>
+    <ion-item>
       <ion-label position="floating">
         2° Número
       </ion-label>
       <ion-input type="number" [(ngModel)]="num2"></ion-input>
     </ion-item>
+
+    <p class="ion-text-center">{{resposta}}</p>
 
     <div>
       <ion-button color="warning" expand="block" (click)="somar()">Somar</ion-button>
@@ -36,8 +38,6 @@
     <div>
       <ion-button color="success" expand="block" (click)="dividir()">Dividir</ion-button>
     </div>
-
-    <div>{{resposta}}</div>
    </div>
   </div>
 </ion-content>
