--- a/qualocombustivel/src/app/home/home.page.scss
+++ b/qualocombustivel/src/app/home/home.page.scss
@@ -1,27 +1,23 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  width:100%;
+  padding: 8px 16px;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-img {
+  margin: auto;
+  max-width: 100%;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.footer {
+  width:100%;
+  padding: 8px;
+  h3{
+    text-align: center;
+  }
+  .images {
+    display: flex;
+    justify-content: center;
+  }
+  ion-img {
+    width:75%;
+    margin: 8px;
+  }
 }
