--- a/qualocombustivel/src/app/home/home.page.html
+++ b/qualocombustivel/src/app/home/home.page.html
@@ -24,7 +24,7 @@
       <ion-input type="number" placeholder="Preço do Etanol" [(ngModel)]="etanol"></ion-input>
     </ion-item>
 
-    <ion-button disabled="{{gasolina == null || etanol == null}}" expand="block" color="success" (click)="verificar()" >Verificar</ion-button>
+    <ion-button disabled="{{gasolina === null || etanol === null}}" expand="block" color="success" (click)="verificar()" >Verificar</ion-button>
 
     <div class="footer">
       <h3 *ngIf="title">{{title}}</h3>
