--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -13,15 +13,15 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(7)" >7</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('7')" >7</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(8)" >8</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('8')" >8</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(9)" >9</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('9')" >9</ion-button>
       </ion-col>
 
       <ion-col>
@@ -31,15 +31,15 @@
 
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(4)" >4</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('4')" >4</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(5)" >5</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('5')" >5</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(6)" >6</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('6')" >6</ion-button>
       </ion-col>
 
       <ion-col>
@@ -49,15 +49,15 @@
 
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(1)" >1</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('1')" >1</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(2)" >2</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('2')" >2</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(3)" >3</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('3')" >3</ion-button>
       </ion-col>
 
       <ion-col>
@@ -71,7 +71,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito(0)" >0</ion-button>
+        <ion-button expand="block" (click)="insereUmDigito('0')" >0</ion-button>
       </ion-col>
 
       <ion-col>
