--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -85,7 +85,10 @@
 
     <ion-row>
       <ion-col>
-        <ion-button expand="block" color="danger" (click)="limpar()" >Limpar</ion-button>
+        <ion-button expand="block" color="danger" (click)="limpar()" >
+          <ion-icon name="trash-outline" ></ion-icon>
+          Limpar
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
