--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -13,73 +13,73 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('7')" >7</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('7')" >7</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('8')" >8</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('8')" >8</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('9')" >9</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('9')" >9</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('/')" >/</ion-button>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('4')" >4</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('5')" >5</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('6')" >6</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('x')" >&times;</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('/')" >/</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('1')" >1</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('4')" >4</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('2')" >2</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('5')" >5</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('3')" >3</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('6')" >6</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('-')" >-</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('x')" >&times;</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('.')" >.</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('1')" >1</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('0')" >0</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('2')" >2</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="calcular()" >=</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('3')" >3</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button expand="block" (click)="insereUmDigito('+')" >+</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('-')" >-</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('.')" >.</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="light" expand="block" (click)="insereUmDigito('0')" >0</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="success" expand="block" (click)="calcular()" >=</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('+')" >+</ion-button>
       </ion-col>
     </ion-row>
 
