--- a/Calculadora/src/app/home/home.page.scss
+++ b/Calculadora/src/app/home/home.page.scss
@@ -1,27 +1,22 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-input {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-button {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-button:active {
+  animation: active 0.1s linear;
 }
 
-#container a {
-  text-decoration: none;
+@keyframes active {
+  0%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(1.1);
+  }
 }
