--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -43,7 +43,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('x')" >&times;</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereUmDigito('x')" >x</ion-button>
       </ion-col>
     </ion-row>
 
