--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -8,70 +8,70 @@
 
 <ion-content [fullscreen]="true">
   <ion-item>
-    <ion-input [(ngModel)]="valor" placeholder="0" class="ion-text-right" ></ion-input>
+    <ion-text class="ion-text-right" >{{ display }}</ion-text>
   </ion-item>
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('7')" >7</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('7')" >7</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('8')" >8</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('8')" >8</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('9')" >9</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('9')" >9</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('/')" >/</ion-button>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('4')" >4</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('5')" >5</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('6')" >6</ion-button>
-      </ion-col>
-
-      <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('x')" >x</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereOperador('/')" >/</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('1')" >1</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('4')" >4</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('2')" >2</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('5')" >5</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('3')" >3</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('6')" >6</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('-')" >-</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereOperador('x')" >x</ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('.')" >.</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('1')" >1</ion-button>
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereUmDigito('0')" >0</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('2')" >2</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="light" expand="block" (click)="insereNumero('3')" >3</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="medium" expand="block" (click)="insereOperador('-')" >-</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-button color="medium" expand="block" (click)="insereUmPonto()" >.</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button color="light" expand="block" (click)="insereZero()" >0</ion-button>
       </ion-col>
 
       <ion-col>
@@ -79,7 +79,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmDigito('+')" >+</ion-button>
+        <ion-button color="medium" expand="block" (click)="insereOperador('+')" >+</ion-button>
       </ion-col>
     </ion-row>
 
