--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -67,7 +67,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button color="medium" expand="block" (click)="insereUmPonto()" >.</ion-button>
+        <ion-button color="light" expand="block" (click)="insereUmPonto()" >.</ion-button>
       </ion-col>
 
       <ion-col>
