--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-text-center">
   <ion-toolbar>
     <ion-title>
       Calculadora
@@ -87,7 +87,6 @@
       <ion-col>
         <ion-button expand="block" color="danger" (click)="limpar()" >
           <ion-icon name="trash-outline" ></ion-icon>
-
         </ion-button>
       </ion-col>
     </ion-row>
