--- a/Calculadora/src/app/home/home.page.scss
+++ b/Calculadora/src/app/home/home.page.scss
@@ -2,11 +2,13 @@ ion-text {
   font-size: 32px;
   width: 100%;
   font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
 }
 
 ion-button {
   font-size: 24px;
   font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
 }
 
 ion-button:active {
