--- a/PokeApp/src/app/home/home.page.html
+++ b/PokeApp/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <div id="container">
-    <ion-item *ngFor="let regiao of regioes" (click)="mostrarDetalhes(regiao.url)" >
+    <ion-item button *ngFor="let regiao of regioes" (click)="mostrarPokemons(regiao.url)" >
       {{ regiao.name | titlecase }}
     </ion-item>
   </div>
