--- a/PokeApp/src/app/components/detalhes/detalhes.page.scss
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.scss
@@ -1,5 +1,7 @@
 ion-img {
     image-rendering: pixelated;
+    width: 75%;
+    margin: auto;
 }
 
 .normal {
@@ -78,5 +80,5 @@ ion-img {
     color: white;
     text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
     font-weight: bold;
-    padding: 1rem; 
+    text-align: center;
 }
