--- a/PokeApp/src/app/components/pokemons/pokemons.page.html
+++ b/PokeApp/src/app/components/pokemons/pokemons.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-back-button slot="start"></ion-back-button>
-    <ion-title>Pokemons na região {{ regiao | uppercase }}</ion-title>
+    <ion-title>{{ regiao | uppercase }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <div>
     <ion-item button *ngFor="let pokemon of pokemons" (click)="mostrarPokemon(pokemon.pokemon_species.name)" >
       {{ pokemon.pokemon_species.name | titlecase }}
