--- a/PokeApp/src/app/components/pokemons/pokemons.page.html
+++ b/PokeApp/src/app/components/pokemons/pokemons.page.html
@@ -7,7 +7,7 @@
 
 <ion-content padding>
   <div>
-    <ion-item button *ngFor="let pokemon of pokemons" (click)="mostrarPokemon(pokemon.pokemon_species.name)" >
+    <ion-item button *ngFor="let pokemon of pokemons" (click)="mostrarPokemon(pokemon.pokemon_species.url)" >
       {{ pokemon.pokemon_species.name | titlecase }}
     </ion-item>
   </div>
