--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -7,7 +7,7 @@
 
 <ion-content padding>
   <ion-card>
-    <ion-img class="{{pokemon.types[0].type.name}}" [src]="pokemon.sprites.front_default"></ion-img>
+    <ion-img [src]="pokemon.sprites.front_default"></ion-img>
 
     <ion-card-header>
 
