--- a/PokeApp/src/app/components/detalhes/detalhes.page.scss
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.scss
@@ -2,6 +2,21 @@ ion-img {
     image-rendering: pixelated;
     max-width: 200px;
     margin: auto;
+    animation: loop 0.5s infinite;
+}
+
+@keyframes loop {
+    0% {
+        transform:translateY(0px);
+    }
+
+    50% {
+        transform:translateY(10px);
+    }
+
+    100%{
+        transform:translateY(0px);
+    }
 }
 
 .normal {
