--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -16,7 +16,7 @@
       </ion-card-title>
 
       <ion-card-subtitle class="ion-text-center">
-        altura {{ pokemon.height }} metros, {{ pokemon.weight }} quilos
+        Altura {{ pokemon.height }} metros, Peso {{ pokemon.weight }} quilos
       </ion-card-subtitle>
 
      <ion-list>
