--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -1,16 +1,15 @@
 <ion-header [translucent]="true" class="ion-text-center">
   <ion-toolbar>
-    <ion-title>
-      Calculadora
-    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-item>
-    <ion-text class="ion-text-right" >{{ display }}</ion-text>
-  </ion-item>
+<ion-content [fullscreen]="true" padding>
   <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-text>{{ display }}</ion-text>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col>
         <ion-button color="light" expand="block" (click)="insereNumero('7')" >7</ion-button>
