--- a/Calculadora/src/app/home/home.page.scss
+++ b/Calculadora/src/app/home/home.page.scss
@@ -1,6 +1,8 @@
 ion-text {
   font-size: 32px;
-  width: 100%;
+  display: block;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.05));
+  text-align: right;
   font-weight: bold;
   font-family: 'Orbitron', sans-serif;
 }
