--- a/Calculadora/src/app/home/home.page.scss
+++ b/Calculadora/src/app/home/home.page.scss
@@ -11,10 +11,22 @@ ion-button {
   font-size: 24px;
   font-weight: bold;
   font-family: 'Orbitron', sans-serif;
+  height: 100%;
 }
 
 ion-button:active {
   animation: active 0.1s linear;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  flex-direction: column;
+}
+
+ion-row {
+  flex: 1;
 }
 
 @keyframes active {
