--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content padding >
-  <ion-card>
+  <ion-card [ngStyle]="{background}">
     <ion-img [src]="pokemon.sprites.front_default"></ion-img>
 
     <ion-card-header>
