--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content padding >
-  <ion-card [ngStyle]="{background}">
+  <ion-card [style.background]="background">
     <ion-img [src]="pokemon.sprites.front_default"></ion-img>
 
     <ion-card-header>
@@ -15,7 +15,7 @@
         {{ pokemon.name | titlecase }}
       </ion-card-title>
 
-      <ion-card-subtitle class="ion-text-center">
+      <ion-card-subtitle class="ion-text-center" color="dark">
         Altura {{ pokemon.height }} metros, Peso {{ pokemon.weight }} quilos
       </ion-card-subtitle>
 
@@ -44,7 +44,7 @@
         </ion-item>
       </ion-list>
 
-      <ion-grid>
+      <ion-grid [ngStyle]="{'background-color':'white'}">
 
         <ion-row>
           <ion-col>
