--- a/Calculadora/src/app/home/home.page.html
+++ b/Calculadora/src/app/home/home.page.html
@@ -66,7 +66,7 @@
       </ion-col>
 
       <ion-col>
-        <ion-button color="light" expand="block" (click)="insereZero()" >0</ion-button>
+        <ion-button color="light" expand="block" (click)="insereNumero('0')" >0</ion-button>
       </ion-col>
 
       <ion-col>
