--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -7,8 +7,9 @@
 
 <ion-content padding >
   <ion-card [style.background]="background">
-    <ion-img [src]="pokemon.sprites.front_default"></ion-img>
 
+    <ion-img [src]="pokemon.sprites.front_default"></ion-img>
+    
     <ion-card-header>
 
       <ion-card-title class="ion-text-center">
@@ -16,7 +17,7 @@
       </ion-card-title>
 
       <ion-card-subtitle class="ion-text-center" color="dark">
-        Altura {{ pokemon.height }} metros, Peso {{ pokemon.weight }} quilos
+        Altura {{ pokemon.height / 10 }} metros, Peso {{ pokemon.weight / 10 }} quilos
       </ion-card-subtitle>
 
      <ion-list>
