--- a/PokeApp/src/app/components/detalhes/detalhes.page.html
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.html
@@ -8,8 +8,8 @@
 <ion-content padding >
   <ion-card [style.background]="background">
 
-    <ion-img [src]="pokemon.sprites.front_default"></ion-img>
-    
+    <ion-img [src]="pokemon_sprite"></ion-img>
+
     <ion-card-header>
 
       <ion-grid [ngStyle]="{'background-color':'white'}">
@@ -21,6 +21,8 @@
         <ion-card-subtitle class="ion-text-center" color="dark">
           Altura {{ pokemon.height / 10 }} metros, Peso {{ pokemon.weight / 10 }} quilos
         </ion-card-subtitle>
+
+        <ion-button expand="block" (click)="trocarSprite()" color="light" >{{ forma }}</ion-button>
 
         <ion-row>
           <ion-col>
