--- a/PokeApp/src/app/components/detalhes/detalhes.page.scss
+++ b/PokeApp/src/app/components/detalhes/detalhes.page.scss
@@ -1,9 +1,3 @@
-ion-img {
-    image-rendering: pixelated;
-    max-width: 200px;
-    margin: auto;
-}
-
 .normal {
     background-color: #bdbdb1;
 }
@@ -81,4 +75,11 @@ ion-img {
     text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
     font-weight: bold;
     text-align: center;
+}
+
+ion-img {
+    image-rendering: pixelated;
+    max-width: 200px;
+    margin: auto;
+    filter: drop-shadow(rgba(0, 0, 0, 0.5) 5px 10px 5px );
 }
